feat: Complete the profile
Add  few fields and a button to the page

--- a/html/profilePage.html
+++ b/html/profilePage.html
@@ -25,7 +25,38 @@
         <li>Rent</li>
     </ul>
     <fieldset>
-
+        <div class="well">
+            <h4>Car model</h4>
+            <p>car name</p>
+        </div>
+        <div class="well">
+            <img src="../img/mohamad-rashidi-717605-unsplash.jpg" style="height: 250px ; width: 300px">
+        </div>
+        <div class="row" >
+            <div class="col-sm-12">
+                <div class="well">
+                    <p class="text-left">Cost :1300$</p>
+                </div>
+                <dic class =" row">
+                    <div class="well column">
+                        <p class="text-left">Year :2017</p>
+                    </div>
+                    <div class="well column">
+                        <p class="text-left">kilmoter : 3000 km</p>
+                    </div>
+                    <div class="well column">
+                        <p class="text-left">automatic : yes</p>
+                    </div>
+                </dic>
+                <div class="well">
+                    <p class="text-left">color :blue</p>
+                </div>
+            </div>
+        </div>
+        <div class="well">
+            <p class="text-left"> discription : </p>
+        </div>
+        <input type="button" name="next" class="next action-button col-md-2" style="float: right" value="Next"/>
     </fieldset>
     <fieldset>
 
