Add some id to html elements
Add id to button for using it in javascript

--- a/html/signup.html
+++ b/html/signup.html
@@ -55,7 +55,7 @@
     <h3 class="fs-subtitle">We send a code to your Email</h3>
     <input type="text" name="emailCode" placeholder="Code" />
     <input type="button" name="previous" class="previous action-button" value="Previous" />
-    <input type="button" name="next" class="next action-button" value="Next" />
+    <input type="button" name="next" class="next action-button" value="Next" id="myNext" />
   </fieldset>
   <fieldset>
     <h2 class="fs-title">Congratulations!</h2>
