fix: Add class to car elements
Add class attribute to elements of cars in the page for wornking with it in js

--- a/html/User-profilepage.html
+++ b/html/User-profilepage.html
@@ -11,11 +11,11 @@
     <link rel="icon" href="../img/icon.png">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../css/normalize.css">
+    <!--<link rel="stylesheet" href="../css/normalize.css">-->
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
-    <script src="../js/bootstrap.js"></script>
+    <!--<script src="../js/vendor/modernizr-2.8.3.min.js"></script>-->
+    <!--<script src="../js/bootstrap.js"></script>-->
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -550,7 +550,7 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-new-window "></span> Add car</a></li>
+            <li><a href="file:///D:/TC-WEB-Front/html/User-Addcar.html"><span class="glyphicon glyphicon-new-window "></span> Add car</a></li>
             <li><a href="Login.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
     </div>
@@ -655,9 +655,10 @@
                 <div class="w3-half w3-margin-bottom column1">
                     <img src="../img/6572131-tehran-wallpapers.jpg" alt="Norway" style="width:100%">
                     <div class="w3-container w3-white">
-                        <h3>KIA,sportage</h3>
-                        <p class="w3-opacity">Cost: $1000</p>
-                        <p>Km : 1000</p>
+                        <h3 class="name1"></h3>
+                        <h4 class="company1"></h4>
+                        <p class="w3-opacity cost1"></p>
+                        <p class="kilometer1"></p>
                         <button class="w3-button w3-margin-bottom">Rent</button>
                     </div>
                 </div>
@@ -665,18 +666,20 @@
                 <div class="w3-half w3-margin-bottom column1">
                     <img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">
                     <div class="w3-container w3-white">
-                        <h3>hyundai, tucson</h3>
-                        <p class="w3-opacity">Cost: $3900</p>
-                        <p>Km : 1000</p>
+                        <h3 class="name2"></h3>
+                        <h4 class="company2"></h4>
+                        <p class="w3-opacity cost2"></p>
+                        <p class="kilometer2"></p>
                         <button class="w3-button w3-margin-bottom">Rent</button>
                     </div>
                 </div>
                 <div class="w3-half w3-margin-bottom column1">
                     <img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">
                     <div class="w3-container w3-white">
-                        <h3>BMW, i8</h3>
-                        <p class="w3-opacity">Cost: $200</p>
-                        <p>Km : 1000</p>
+                        <h3 class="name3"></h3>
+                        <h4 class="company3"></h4>
+                        <p class="w3-opacity cost3"></p>
+                        <p class="kilometer3"></p>
                         <button class="w3-button w3-margin-bottom">Rent</button>
                     </div>
                 </div>
@@ -687,27 +690,30 @@
                 <div class="w3-half w3-margin-bottom column1">
                     <img src="../img/6572131-tehran-wallpapers.jpg" alt="Norway" style="width:100%">
                     <div class="w3-container w3-white">
-                        <h3>iran khodro, dana</h3>
-                        <p class="w3-opacity">Cost: $7900</p>
-                        <p>Km : 1000</p>
+                        <h3 class="name4"></h3>
+                        <h4 class="company4"></h4>
+                        <p class="w3-opacity cost4"></p>
+                        <p class="kilometer4"></p>
                         <button class="w3-button w3-margin-bottom">Rent</button>
                     </div>
                 </div>
                 <div class="w3-half w3-margin-bottom column1">
                     <img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">
                     <div class="w3-container w3-white">
-                        <h3>saipa,131</h3>
-                        <p class="w3-opacity">Cost: $540</p>
-                        <p>Km : 1000</p>
+                        <h3 class="name5"></h3>
+                        <h4 class="company5"></h4>
+                        <p class="w3-opacity cost5"></p>
+                        <p class="kilometer5"></p>
                         <button class="w3-button w3-margin-bottom">Rent</button>
                     </div>
                 </div>
                 <div class="w3-half w3-margin-bottom column1">
                     <img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">
                     <div class="w3-container w3-white">
-                        <h3>mazda , 3 new</h3>
-                        <p class="w3-opacity">Cost: $400</p>
-                        <p>Km : 1000</p>
+                        <h3 class="name6"></h3>
+                        <h4 class="company6"></h4>
+                        <p class="w3-opacity cost6"></p>
+                        <p class="kilometer6"></p>
                         <button class="w3-button w3-margin-bottom">Rent</button>
                     </div>
                 </div>
@@ -772,6 +778,9 @@
         <i class="fa fa-linkedin w3-hover-opacity"></i>
     </div>
 </footer>
+
+<script src="../js/vendor/jquery-3.3.1.min.js"></script>
+<script src="../js/UserProfile.js"></script>
 
 </body>
 
