--- a/html/profilePage.html
+++ b/html/profilePage.html
@@ -35,28 +35,28 @@
         <div class="row" >
             <div class="col-sm-12">
                 <div class="well">
-                    <p class="text-left">Cost :1300$</p>
+                    <p class="text-left">Cost: <b id="myCost"></b></p>
                 </div>
                 <dic class =" row">
                     <div class="well column">
-                        <p class="text-left">Year :2017</p>
+                        <p class="text-left">Year: <b id="myYear"></b></p>
                     </div>
                     <div class="well column">
-                        <p class="text-left">kilmoter : 3000 km</p>
+                        <p class="text-left">kilometer: <b id="myKilometer"></b> km</p>
                     </div>
                     <div class="well column">
-                        <p class="text-left">automatic : yes</p>
+                        <p class="text-left">automatic: <b id="myAutomatic"></b></p>
                     </div>
                 </dic>
                 <div class="well">
-                    <p class="text-left">color :blue</p>
+                    <p class="text-left">color: <b id="myColor"></b></p>
                 </div>
             </div>
         </div>
         <div class="well">
-            <p class="text-left"> discription : </p>
+            <p class="text-left"> description: <b id="myDescription"></b></p>
         </div>
-        <input type="button" name="next" class="next action-button col-md-2" style="float: right" value="Next"/>
+        <input type="button" name="next" id="myNext" class="next action-button col-md-2" style="float: right" value="Next"/>
     </fieldset>
     <fieldset>
 
@@ -65,7 +65,7 @@
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
 
-
+<script src="../js/vendor/jquery-3.3.1.min.js"></script>
 <script src="../js/ProfilePage.js"></script>
 
 
