fix: fix sort button
changin drowp down button with button.

--- a/html/User-profilepage.html
+++ b/html/User-profilepage.html
@@ -43,99 +43,6 @@
     <style>
 
 
-        .logo-small {
-            color: #f4511e;
-            font-size: 50px;
-        }
-
-        .logo {
-            color: #f4511e;
-            font-size: 200px;
-        }
-
-        .thumbnail {
-            padding: 0 0 15px 0;
-            border: none;
-            border-radius: 0;
-        }
-
-        .thumbnail img {
-            width: 100%;
-            height: 100%;
-            margin-bottom: 10px;
-        }
-
-        .carousel-control.right, .carousel-control.left {
-            background-image: none;
-            color: #f4511e;
-        }
-
-        .carousel-indicators li {
-            border-color: #f4511e;
-        }
-
-        .carousel-indicators li.active {
-            background-color: #f4511e;
-        }
-
-        .item h4 {
-            font-size: 19px;
-            line-height: 1.375em;
-            font-weight: 400;
-            font-style: italic;
-            margin: 70px 0;
-        }
-
-        .item span {
-            font-style: normal;
-        }
-
-        .panel {
-            border: 1px solid #f4511e;
-            border-radius: 0 !important;
-            transition: box-shadow 0.5s;
-        }
-
-        .panel:hover {
-            box-shadow: 5px 0px 40px rgba(0, 0, 0, .2);
-        }
-
-        .panel-footer .btn:hover {
-            border: 1px solid #f4511e;
-            background-color: #fff !important;
-            color: #f4511e;
-        }
-
-        .panel-heading {
-            color: #fff !important;
-            background-color: #f4511e !important;
-            padding: 25px;
-            border-bottom: 1px solid transparent;
-            border-top-left-radius: 0px;
-            border-top-right-radius: 0px;
-            border-bottom-left-radius: 0px;
-            border-bottom-right-radius: 0px;
-        }
-
-        .panel-footer {
-            background-color: white !important;
-        }
-
-        .panel-footer h3 {
-            font-size: 32px;
-        }
-
-        .panel-footer h4 {
-            color: #aaa;
-            font-size: 14px;
-        }
-
-        .panel-footer .btn {
-            margin: 15px 0;
-            background-color: #f4511e;
-            color: #fff;
-        }
-
         @font-face {
             font-family: "MyFont";
             src: url(../fonts/WHOOPASS.TTF);
@@ -489,20 +396,19 @@
         }
 
         .search-div .search-form .form-control {
-            width: 33%;
+            width: 16%;
             margin-left: 323px;
             margin-top: 30px;
             margin-bottom: 30px;
         }
 
         .search-butt {
-            margin-left: 60px;
-            width: 10%;
+            margin-left: 2px;
+            width: 9%;
             height: 35px;
             margin-top: 30px;
             margin-bottom: 30px;
         }
-
         .search-butt1 {
             margin-left: 13px;
             width: 10%;
@@ -510,7 +416,6 @@
             margin-top: 30px;
             margin-bottom: 30px;
         }
-
         .search-butt2 {
             margin-left: -53px;
             width: 10%;
@@ -518,12 +423,10 @@
             margin-top: 30px;
             margin-bottom: 30px;
         }
-
         .dropdown_buut {
             width: 60%;
             height: 36px;
         }
-
         .btn-danger {
             color: #fff;
             background-color: #ac2925 !important;
@@ -594,16 +497,17 @@
             </h2>
         </div>
 
-
         <div class="search-div">
             <form action="" class="search-form">
                 <input type="text" class="form-control column1" placeholder="Search">
-                <button type="submit" class="btn btn-danger column1 search-butt"
-                        style="background-color:  #ba131a!important;" value="Search">Search
-                </button>
-                <div class="dropdown column1 search-butt1">
+                <button type="submit" class="btn btn-danger column1 search-butt" value="Search">Search</button>
+                <button type="button" class="btn btn-danger column1 search-butt" value="Search">Cost Descending</button>
+                <button type="button" class="btn btn-danger column1 search-butt" value="Search">Cost Ascending</button>
+                <button type="button" class="btn btn-danger column1 search-butt" value="Search">Year Descending</button>
+                <button type="button" class="btn btn-danger column1 search-butt" value="Search">Year Ascending</button>
+                <!--<div class="dropdown column1 search-butt1">
                     <button class="btn btn-danger dropdown-toggle dropdown_buut "
-                            style="background-color:  #ba131a!important;" type="button" data-toggle="dropdown">Cost
+                            style="background-color: #ac2925!important;" type="button" data-toggle="dropdown">Cost
                         <span class="caret"></span></button>
                     <ul class="dropdown-menu">
                         <form>
@@ -618,7 +522,7 @@
                 </div>
                 <div class="dropdown column1 search-butt2">
                     <button class="btn btn-danger dropdown-toggle dropdown_buut "
-                            style="background-color:#ba131a!important;" type="button" data-toggle="dropdown">Year
+                            style="background-color: #ac2925!important;" type="button" data-toggle="dropdown">Year
                         <span class="caret"></span></button>
                     <ul class="dropdown-menu">
                         <form>
@@ -630,11 +534,9 @@
                             </div>
                         </form>
                     </ul>
-                </div>
+                </div>-->
             </form>
         </div>
-
-
         <div class="col-lg-9" style="text-align: center ; margin-left: 11.5%">
             <div class="column1">
                 <h4 class="Amazon">Hassle free</h4>
