fix: Edit json name

--- a/html/profilePage.html
+++ b/html/profilePage.html
@@ -27,7 +27,7 @@
     <fieldset>
         <div class="well">
             <h4>Car model</h4>
-            <p>car name</p>
+            <p id="myName"></p>
         </div>
         <div class="well">
             <img src="../img/mohamad-rashidi-717605-unsplash.jpg" style="height: 250px ; width: 300px">
