--- a/html/Adminpage.html
+++ b/html/Adminpage.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="../css/Admin.css" type="text/css">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
     <link rel="icon" href="../img/icon.png">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/bootstrap.css">
@@ -27,8 +27,8 @@
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
-    <script src="../js/bootstrap.js"></script>
+    <!--<script src="../js/vendor/modernizr-2.8.3.min.js"></script>-->
+    <!--<script src="../js/bootstrap.js"></script>-->
 
     <title>TC</title>
 
