fix: Fix login page redirects

--- a/html/Login.html
+++ b/html/Login.html
@@ -184,7 +184,7 @@
 </div>
 
 <script src="../js/vendor/jquery-3.3.1.min.js"></script>
-<script src="../js/ProfilePage.js"></script>
+<script src="../js/main.js"></script>
 
 </body>
 </html>
