fix: Fix user page redirections

--- a/html/User-Addcar.html
+++ b/html/User-Addcar.html
@@ -45,7 +45,7 @@
         <input type="text" name="price" placeholder="Price of your car">
         <input type="text" name="kilometer" placeholder="Kilometer">
         <input type="text" name="description" placeholder="About your car...">
-        <input type="button" name="next" class="next action-button" value="Next" id="mySubmit"/>
+        <input type="button" name="next" class="next action-button" value="Add" id="mySubmit"/>
     </fieldset>
 </form>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
