--- a/html/User-profilepage.html
+++ b/html/User-profilepage.html
@@ -561,7 +561,7 @@
                         <h4 class="company1"></h4>
                         <p class="w3-opacity cost1"></p>
                         <p class="kilometer1"></p>
-                        <button class="w3-button w3-margin-bottom">Rent</button>
+                        <button class="w3-button w3-margin-bottom" id="rent1">Rent</button>
                     </div>
                 </div>
 
@@ -572,7 +572,7 @@
                         <h4 class="company2"></h4>
                         <p class="w3-opacity cost2"></p>
                         <p class="kilometer2"></p>
-                        <button class="w3-button w3-margin-bottom">Rent</button>
+                        <button class="w3-button w3-margin-bottom" id="rent2">Rent</button>
                     </div>
                 </div>
                 <div class="w3-half w3-margin-bottom column1">
@@ -582,7 +582,7 @@
                         <h4 class="company3"></h4>
                         <p class="w3-opacity cost3"></p>
                         <p class="kilometer3"></p>
-                        <button class="w3-button w3-margin-bottom">Rent</button>
+                        <button class="w3-button w3-margin-bottom" id="rent3">Rent</button>
                     </div>
                 </div>
             </div>
@@ -596,7 +596,7 @@
                         <h4 class="company4"></h4>
                         <p class="w3-opacity cost4"></p>
                         <p class="kilometer4"></p>
-                        <button class="w3-button w3-margin-bottom">Rent</button>
+                        <button class="w3-button w3-margin-bottom" id="rent4">Rent</button>
                     </div>
                 </div>
                 <div class="w3-half w3-margin-bottom column1">
@@ -606,7 +606,7 @@
                         <h4 class="company5"></h4>
                         <p class="w3-opacity cost5"></p>
                         <p class="kilometer5"></p>
-                        <button class="w3-button w3-margin-bottom">Rent</button>
+                        <button class="w3-button w3-margin-bottom" id="rent5">Rent</button>
                     </div>
                 </div>
                 <div class="w3-half w3-margin-bottom column1">
@@ -616,7 +616,7 @@
                         <h4 class="company6"></h4>
                         <p class="w3-opacity cost6"></p>
                         <p class="kilometer6"></p>
-                        <button class="w3-button w3-margin-bottom">Rent</button>
+                        <button class="w3-button w3-margin-bottom" id="rent6">Rent</button>
                     </div>
                 </div>
             </div>
@@ -683,6 +683,7 @@
 
 <script src="../js/vendor/jquery-3.3.1.min.js"></script>
 <script src="../js/UserProfile.js"></script>
+<script src="../js/ProfilePage.js"></script>
 
 </body>
 
