--- a/html/profilePage.html
+++ b/html/profilePage.html
@@ -67,7 +67,7 @@
 
 <script src="../js/vendor/jquery-3.3.1.min.js"></script>
 <script src="../js/ProfilePage.js"></script>
-
+<script src="../js/UserProfile.js"></script>
 
 </body>
 
