--- a/html/AdminAddCar.html
+++ b/html/AdminAddCar.html
@@ -40,6 +40,22 @@
 
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css'
           integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
+
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="icon" href="../img/icon.png">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <!--<link rel="stylesheet" href="../css/normalize.css">-->
+    <!--<link rel="apple-touch-icon" href="apple-touch-icon.png">-->
+
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <!--<link rel="stylesheet" type="text/css" href="../index.css">-->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <STYLE>
         @font-face {
             font-family: "MyFont";
@@ -53,6 +69,22 @@
         html, body {
             height: 100%;
             background-color: #222
+        }
+        .container {
+            max-width: 960px;
+            margin: 30px auto;
+            padding: -1px;
+        }
+        h1 {
+            font-size: 20px;
+            text-align: center;
+            margin: 20px 0 20px;
+        }
+        h1 small {
+            display: block;
+            font-size: 15px;
+            padding-top: 8px;
+            color: gray;
         }
 
     </STYLE>
@@ -97,11 +129,31 @@
         <br>
         <h1 style="text-align: center ; color: darkred" class="myInfo">Add your Car</h1>
         <form id="msform">
-            <!--<ul id="progressbar">-->
-            <!--<li class="active">Car Information</li>-->
-            <!--</ul>-->
+            <ul id="progressbar">
+                <li class="active">Car Information</li>
+            </ul>
             <fieldset>
                 <h2 class="fs-title">Add your car</h2>
+
+
+                <!--part of upload img -->
+                <h6 > upload your photo</h6>
+                <div class="container">
+                    <div class="upload-img">
+                        <div class="img-edit">
+                            <input type='file' id="imageUpload" accept=".png, .jpg, .jpeg , .tiff" />
+                            <label for="imageUpload" class=" "><span
+                                    class="glyphicon glyphicon-camera" style="padding-right: 3px ; margin-top: 8px ; margin-left: 1px"></span></label>
+                        </div>
+                        <div class="img-preview">
+                            <div id="imagePreview" style="background-image: url(../img/upload.png);">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- part of add thr info -->
                 <input type="text" name="Car-name" placeholder="Car name">
                 <input type="text" name="Car-company" placeholder="Car company">
                 <input type="text" name="year" placeholder="Year of manufacture of your car?!">
@@ -121,6 +173,26 @@
 
 
 </section>
+
+<SCRIPT>
+    // for upload photo
+    
+    function readURL(input) {
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+            reader.onload = function(e) {
+                $('#imagePreview').css('background-image', 'url('+e.target.result +')');
+                $('#imagePreview').hide();
+                $('#imagePreview').fadeIn(650);
+            }
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+    $("#imageUpload").change(function() {
+        readURL(this);
+    });
+
+</SCRIPT>
 <script src="../js/vendor/jquery-3.3.1.min.js"></script>
 <script src="../js/Admin.js"></script>
 </body>
