--- a/html/User-Addcar.html
+++ b/html/User-Addcar.html
@@ -34,6 +34,26 @@
 <form id="msform">
     <fieldset>
         <h2 class="fs-title">Add your car</h2>
+
+
+        <!--part of upload img -->
+        <h6> upload your photo</h6>
+        <div class="container">
+            <div class="upload-img">
+                <div class="img-edit">
+                    <input type='file' id="imageUpload" accept=".png, .jpg, .jpeg , .tiff"/>
+                    <label for="imageUpload" class=" "><span
+                            class="glyphicon glyphicon-camera"
+                            style="padding-right: 3px ; margin-top: 8px ; margin-left: 1px"></span></label>
+                </div>
+                <div class="img-preview">
+                    <div id="imagePreview" style="background-image: url(../img/upload.png);">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--part of info-->
         <input type="text" name="car-name" placeholder="Car name">
         <input type="text" name="car-company" placeholder="Car company">
         <input type="text" name="year" placeholder="Year of manufacture of your car?!">
@@ -48,6 +68,28 @@
         <input type="button" name="next" class="next action-button" value="Add" id="mySubmit"/>
     </fieldset>
 </form>
+
+
+<SCRIPT>
+    // for upload photo
+
+    function readURL(input) {
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+            reader.onload = function (e) {
+                $('#imagePreview').css('background-image', 'url(' + e.target.result + ')');
+                $('#imagePreview').hide();
+                $('#imagePreview').fadeIn(650);
+            }
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+
+    $("#imageUpload").change(function () {
+        readURL(this);
+    });
+</SCRIPT>
+
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
 
@@ -55,7 +97,6 @@
 
 <script src="../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
 <script src="../js/User-AddCar.js"></script>
-
 
 
 </body>
