fix: Add button

--- a/html/User-profilepage.html
+++ b/html/User-profilepage.html
@@ -409,6 +409,7 @@
             margin-top: 30px;
             margin-bottom: 30px;
         }
+
         .search-butt1 {
             margin-left: 13px;
             width: 10%;
@@ -416,6 +417,7 @@
             margin-top: 30px;
             margin-bottom: 30px;
         }
+
         .search-butt2 {
             margin-left: -53px;
             width: 10%;
@@ -423,10 +425,12 @@
             margin-top: 30px;
             margin-bottom: 30px;
         }
+
         .dropdown_buut {
             width: 60%;
             height: 36px;
         }
+
         .btn-danger {
             color: #fff;
             background-color: #ac2925 !important;
@@ -453,7 +457,10 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="file:///D:/TC-WEB-Front/html/User-Addcar.html"><span class="glyphicon glyphicon-new-window "></span> Add car</a></li>
+            <li><a href="file:///D:/TC-WEB-Front/html/User-Addcar.html"><span
+                    class="glyphicon glyphicon-list "></span> List of car</a></li>
+            <li><a href="file:///D:/TC-WEB-Front/html/User-Addcar.html"><span
+                    class="glyphicon glyphicon-new-window "></span> Add car</a></li>
             <li><a href="Login.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
     </div>
@@ -669,6 +676,7 @@
     </a>
     <p><a href="User-profilepage.html" title="">UP</a></p>
 </footer>-->
+
 <footer class="w3-center parallex1 w3-padding-64">
     <a href="User-profilepage.html" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>UP</a>
     <div class="w3-xlarge w3-section">
